# unrollcuda

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
data/scripts/: loop_unrolling.py
examples/: cross.cu  cross.py  elementwise_mul.cu  elementwise_mul.py  elementwise_mul_profile.sh  invert.cu  invert.py  output.pstats  redefinition.py  unrollcuda_test.py
scripts/: addressing_1d.py  info.py  kernel.cu  loop_unrolling_1d.cu  loop_unrolling_1d.py  loop_unrolling_2d.cu  loop_unrolling_2d.py  loop_unrolling_3d.cu  loop_unrolling_3d.py  loop_unrolling_nd.cu  loop_unrolling_nd.py  loop_unrolling_nd_batching.cu  loop_unrolling_nd_batching.py  mandel.py  mandelbrot.cu  unravelcuda.cu  unravelcuda.py
src/unrollcuda/: __init__.py  unrollcuda.py
tests/: conftest.py  test_batch_size.py  test_call_unroll.py  test_delete_indices.py  test_duplicate_file.py  test_kernel_reuse.py  test_recompilation.py
