[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unrollcuda"
version = "0.0.1"
authors = [
  { name="Aleksei Iurasov", email="format37@gmail.com" },
]
description = "Loop unrolling and batching for CUDA"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/format37/unrollcuda"
"Bug Tracker" = "https://github.com/format37/unrollcuda/issues"